[package]
name = "rust-raknet"
version = "0.1.1"
edition = "2021"
authors = ["b23r0 <b23r0@foxmail.com>"]
description = "RakNet Protocol implementation by Rust."
repository = "https://github.com/b23r0/rust-raknet"
readme = "README.md"
license = "MIT"
keywords = ["raknet", "networking" , "udp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
rand = {version = "0.8.5", features = ["std"]}
tokio = {version = "1.17.0", features = ["full"]}