[package]
name = "rust-raknet"
version = "0.12.0"
edition = "2021"
authors = ["b23r0 <b23r0@foxmail.com>"]
description = "RakNet Protocol implementation by Rust."
repository = "https://github.com/b23r0/rust-raknet"
documentation = "https://docs.rs/rust-raknet/latest/rust_raknet/"
readme = "README.md"
license = "MIT"
keywords = ["raknet", "networking" , "game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
rand = {version = "0.8.5", features = ["std"]}
tokio = {version = "1.20.1", features = ["full"]}